# policy-rail

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  README.pt-BR.md  SECURITY.md  d-pi-shield.md  d-pi-shield.pt-BR.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
docs/: architecture.md  architecture.pt-BR.md  mcp.md
examples/: basic_usage.py  custom_classifier.py
src/policyrail/: __init__.py  cli.py
src/policyrail/core/: __init__.py  classifiers.py  detectors.py  models.py  partitioning.py  policies.py  sanitizers.py  validators.py
src/policyrail/integrations/: __init__.py  anthropic_classifier.py  azure_openai_classifier.py  base.py  bedrock_classifier.py  factory.py  google_genai_classifier.py  openai_classifier.py  openai_compatible.py
src/policyrail/mcp/: __init__.py  client.py  execution.py  models.py  transports.py
src/policyrail/observability/: __init__.py  audit.py  events.py
src/policyrail/pipeline/: __init__.py  secure_pipeline.py
src/policyrail/templates/: __init__.py  system_policies.py
tests/helpers/: stdio_mcp_server.py
tests/unit/: test_audit.py  test_classifier_hardening.py  test_detector.py  test_events.py  test_mcp.py  test_mcp_transports.py  test_openai_classifier.py  test_partitioning.py  test_pipeline.py  test_policy_and_validation.py  test_provider_classifiers.py  test_sanitizer.py
