[build-system]
requires = ["setuptools>=77.0.3", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "policyrail-ai"
dynamic = ["version"]
description = "Policy-driven guardrails for GenAI runtimes, copilots and agents."
license = "MIT"
license-files = ["LICENSE"]
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "Jeff Tengan" }
]
keywords = [
  "genai",
  "llm",
  "security",
  "prompt-injection",
  "guardrails",
  "mcp",
  "model-context-protocol",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Security",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/jeff-tengan/PolicyRail"
Documentation = "https://github.com/jeff-tengan/PolicyRail#readme"
Repository = "https://github.com/jeff-tengan/PolicyRail"
Changelog = "https://github.com/jeff-tengan/PolicyRail/blob/main/CHANGELOG.md"
Issues = "https://github.com/jeff-tengan/PolicyRail/issues"
Security = "https://github.com/jeff-tengan/PolicyRail/blob/main/SECURITY.md"
Contributing = "https://github.com/jeff-tengan/PolicyRail/blob/main/CONTRIBUTING.md"

[project.optional-dependencies]
dev = ["pytest>=8.0"]
release = ["build>=1.2", "twine>=5.1"]
openai = ["openai>=1.0"]
azure = ["openai>=1.0", "azure-identity>=1.17"]
anthropic = ["anthropic>=0.37"]
google = ["google-genai>=1.0"]
aws = ["boto3>=1.34"]
all = [
  "build>=1.2",
  "twine>=5.1",
  "openai>=1.0",
  "azure-identity>=1.17",
  "anthropic>=0.37",
  "google-genai>=1.0",
  "boto3>=1.34",
]

[project.scripts]
policyrail = "policyrail.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.dynamic]
version = {attr = "policyrail._version.__version__"}

[tool.setuptools.packages.find]
where = ["src"]
